--- a/signup-form/index.html
+++ b/signup-form/index.html
@@ -36,24 +36,24 @@
       <div class="right-side">
         <p class="message"><strong> Try it free 7 days</strong> then $20/mo. thereafter</p>
         <div class="card">
-          <form>
-            <div class="input-group">
-              <input type="text" placeholder="First Name" />
+          <form name="signupForm">
+            <div class="input-group " id="firstNameGroup">
+              <input name="firstName" type="text" placeholder="First Name" />
+              <small class="message"></small>
+            </div>
+            <div class="input-group" id="lastNameGroup">
+              <input name="lastName" type="text" placeholder="Last Name" />
               <small class="message"></small>
             </div>
             <div class="input-group">
-              <input type="text" placeholder="Last Name" />
+              <input name="email" type="email" placeholder="Email Address" />
               <small class="message"></small>
             </div>
             <div class="input-group">
-              <input type="email" placeholder="Email Address" />
+              <input name="password" type="password" placeholder="Password" />
               <small class="message"></small>
             </div>
-            <div class="input-group">
-              <input type="password" placeholder="Password" />
-              <small class="message"></small>
-            </div>
-            <button class="button">Claim your free trial</button>
+            <button id="submitButton" class="button">Claim your free trial</button>
           </form>
           <p class="message1">
             By clicking the button, you are agreeing to our
@@ -62,5 +62,6 @@
         </div>
       </div>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
