--- a/signup-form/index.html
+++ b/signup-form/index.html
@@ -45,11 +45,11 @@
               <input name="lastName" type="text" placeholder="Last Name" />
               <small class="message"></small>
             </div>
-            <div class="input-group">
+            <div class="input-group" id="emailGroup">
               <input name="email" type="email" placeholder="Email Address" />
               <small class="message"></small>
             </div>
-            <div class="input-group">
+            <div class="input-group" id="passwordGroup">
               <input name="password" type="password" placeholder="Password" />
               <small class="message"></small>
             </div>
