--- a/tip-calculator-app-main/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/tip-calculator-app-main/index.html
@@ -43,15 +43,22 @@
 
 <div class="calculation-result">
   <div class="tips-amount calculation-amount">
-    <div class="title">Tips Amount /person</div>
+    <div class="title">
+      <div class="main-title">Tips Amount</div>
+      <div class="subtitle">/ Person</div>
+    </div>
     <div class="amount">$4.27</div>
   </div>
   <div class="total-amount calculation-amount">
-    <div class="title">Total Amount /person</div>
+    <div class="title">
+      <div class="main-title">Total Amount</div>
+      <div class="subtitle">/ Person</div>
+    </div>
     <div class="amount">$52.22</div>
   </div>
   <button class="button">Reset</button>
 </div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
